po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:31+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,7 +30,7 @@ msgstr "CiviMail zal geen e-mail versturen aan een niet-bestaand contact: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
-msgstr "CiviMail verzend geen lege berichttekst, slaat over: %1"
+msgstr "CiviMail kan geen leeg bericht versturen, overgeslagen: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
@@ -261,7 +261,7 @@ msgstr "Mailing volgen?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
-msgstr "Mailing afgerond"
+msgstr "Mailing voltooid"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
@@ -346,7 +346,7 @@ msgstr "Mailing ID (C)"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Testing Criteria"
-msgstr "Testen criteria"
+msgstr "Testcriteria"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Winner Criteria"
@@ -366,11 +366,11 @@ msgstr "Groep Percentage"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
-msgstr "AB Test aangemaakt door"
+msgstr "A/B-test aangemaakt door"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created Date"
-msgstr "AB Test aanmaakdatum"
+msgstr "A/B-test aangemaakt op"
 
 #: CRM/Mailing/DAO/MailingGroup.php
 msgid "Mailing Group ID"
@@ -410,7 +410,7 @@ msgstr "Mailing Job Einddatum"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Is Test?"
-msgstr "Mailing Job Is Test?"
+msgstr "Is de mailing-taak een test?"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Type"
@@ -690,7 +690,7 @@ msgstr "Uw verzoek bevat een fout"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Please Confirm Your Opt Out"
-msgstr "Bevestig a.u.b. uw Opt Out"
+msgstr "Bevestig uw uitschrijving"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Verify email address to opt out:"
@@ -732,7 +732,7 @@ msgstr "Je mailing is opgeslagen. Je kunt er later verder aan werken door te kli
 
 #: CRM/Mailing/Form/Search.php CRM/Mailing/Selector/Browse.php
 msgid "SMS Name"
-msgstr "SMS Naam"
+msgstr "Naam SMS"
 
 #: CRM/Mailing/Form/Search.php
 msgid "Created or Sent by"
@@ -826,7 +826,7 @@ msgid ""
 "Click 'Next' when you are ready to Schedule or Send your live mailing (you "
 "will still have a chance to confirm or cancel sending this mailing on the "
 "next page)."
-msgstr "Klik op 'Volgende' als je deze mailing wil inplannen of verzenden (je kunt op de volgende pagina nog besluiten om de mailing niet te verzenden)."
+msgstr "Klik op 'Volgende' als u deze mailing wilt inplannen of verzenden (u kunt op de volgende pagina nog besluiten de mailing niet te verzenden)."
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test message sent"
@@ -939,7 +939,7 @@ msgstr "Mailing archiveren"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Find Mass SMS"
-msgstr "Vind massa SMS"
+msgstr "Massa-SMS zoeken"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Search Mailings"
@@ -1161,11 +1161,11 @@ msgstr "CiviCRM Mailing Zoeken"
 
 #: ang/crmMailing/BlockApprove.html
 msgid "Unreviewed"
-msgstr ""
+msgstr "Niet beoordeeld"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr "Opslaan Als"
+msgstr "Opslaan als"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
@@ -1181,43 +1181,43 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Voorbeeld als HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Voorbeeld als platte tekst"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr "Test-e-mail verzenden naar:"
+msgstr "Testmail versturen naar:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr "Test-e-mail"
+msgstr "Testmail"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr "Verstuur test-e-mail naar %1"
+msgstr "Testmail versturen naar %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Testmail versturen"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Testmail versturen aan groep:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Een testbericht versturen aan een groep"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Verstuur naar %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Er zal een testbericht verzonden worden naar %1 personen:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
@@ -1225,11 +1225,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "De groep is leeg."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
-msgstr ""
+msgstr "Lijst met ontvangers tonen"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
@@ -1238,15 +1238,15 @@ msgstr ""
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Reacties volgen?"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Reacties automatisch beantwoorden"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
-msgstr ""
+msgstr "Bericht automatisch antwoord"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
@@ -1264,7 +1264,7 @@ msgstr ""
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Platte tekst"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
@@ -1299,15 +1299,15 @@ msgstr ""
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Meteen versturen"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
-msgstr ""
+msgstr "Verzenden op:"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Selecteer campagne"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1340,7 +1340,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Kop- en voettekst"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1368,7 +1368,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Delete Draft"
-msgstr ""
+msgstr "Concept verwijderen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1377,7 +1377,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "Weet u zeker dat u deze mailing wilt verwijderen?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1386,7 +1386,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Save Draft"
-msgstr ""
+msgstr "Concept opslaan"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
@@ -1415,11 +1415,11 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
-msgstr ""
+msgstr "Voorvertonen..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
-msgstr ""
+msgstr "Voorbeeld (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
@@ -1431,7 +1431,7 @@ msgstr ""
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
-msgstr ""
+msgstr "Conflict"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid ""
@@ -1453,11 +1453,11 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
-msgstr ""
+msgstr "Via web"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Email"
-msgstr ""
+msgstr "Via e-mail"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1471,7 +1471,7 @@ msgstr ""
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
-msgstr ""
+msgstr "Sjabloon opslaan"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
@@ -1499,7 +1499,7 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Mandatory Group"
-msgstr ""
+msgstr "Verplichte groep"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
@@ -1529,15 +1529,15 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
-msgstr ""
+msgstr "\"%1\" bijwerken"
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
-msgstr ""
+msgstr "Opslaan als:"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
-msgstr ""
+msgstr "Onderwerp: %1"
 
 #: ang/crmMailing/services.js
 msgid "Could not identify any recipients. Perhaps the group is empty?"
@@ -1545,51 +1545,51 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Bezig met versturen..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
-msgstr ""
+msgstr "Afmeldingen"
 
 #: ang/crmMailing/services.js
 msgid "Opt-Outs"
-msgstr ""
+msgstr "Opt-outs"
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
-msgstr ""
+msgstr "Initialiseren..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
-msgstr ""
+msgstr "Sjabloon (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (B)"
-msgstr ""
+msgstr "Sjabloon (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr ""
+msgstr "Afzender (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr ""
+msgstr "Afzender (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
-msgstr ""
+msgstr "Reply-To (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (B)"
-msgstr ""
+msgstr "Reply-To (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
-msgstr ""
+msgstr "Onderwerp (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (B)"
-msgstr ""
+msgstr "Onderwerp (B)"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid ""
@@ -1600,7 +1600,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr ""
+msgstr "Test-type"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
@@ -1608,15 +1608,15 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
-msgstr ""
+msgstr "Versturen"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
-msgstr ""
+msgstr "A/B-test meteen versturen"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test at:"
-msgstr ""
+msgstr "A/B-test versturen op:"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
@@ -1628,7 +1628,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess A/B test at:"
-msgstr ""
+msgstr "A/B-test beoordelen op:"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
@@ -1640,7 +1640,7 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose"
-msgstr ""
+msgstr "Opstellen"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (A)"
@@ -1652,50 +1652,50 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (A)"
-msgstr ""
+msgstr "Bericht opstellen (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (B)"
-msgstr ""
+msgstr "Bericht opstellen (B)"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "A/B Test Results"
-msgstr ""
+msgstr "Resultaten A/B-test"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid ""
 "This report displays the current results for your A/B test. You can return "
 "to this page to view the latest statistics by navigating to \"Manage A/B "
 "Tests\" and clicking \"Results\"."
-msgstr ""
+msgstr "Dit rapport toont de actuele resultaten van uw A/B-test. U kunt terugkeren naar deze pagina om de meest recente statistieken te bekijken door op de pagina \"A/B-testen beheren\" te klikken op \"Resultaten\"."
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Select as Final"
-msgstr ""
+msgstr "Selecteren als definitieve mailing"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Delivery"
-msgstr ""
+msgstr "Aflevering"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not selected"
-msgstr ""
+msgstr "Niet geselecteerd"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Started at"
-msgstr ""
+msgstr "Begonnen op"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not started"
-msgstr ""
+msgstr "Nog niet begonnen"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Completed at"
-msgstr ""
+msgstr "Voltooid op"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not completed"
-msgstr ""
+msgstr "Niet voltooid"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Search for contacts using '%1'"
@@ -1747,11 +1747,11 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
-msgstr ""
+msgstr "U hebt geen A/B-mailings"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "New A/B Test"
-msgstr ""
+msgstr "Nieuwe A/B-test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
@@ -1781,7 +1781,7 @@ msgstr ""
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing immediately"
-msgstr ""
+msgstr "Definitieve mailing meteen versturen"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid "Send final mailing at:"
@@ -2043,7 +2043,7 @@ msgstr "U kunt instellen dat deze mailing vanaf een bepaalde datum en tijd verzo
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
 "Set a date and time when you want CiviMail to start sending this mailing."
-msgstr "Stel de datum en tijd in dat u wilt dat CiviMail begint met het verzenden van deze mailing."
+msgstr "Stel de datum en tijd in dat u wilt dat CiviMail begint met het versturen van deze mailing."
 
 #: templates/CRM/Mailing/Form/Search/Common.tpl
 #: templates/CRM/Mailing/Form/Search.tpl
@@ -2052,11 +2052,11 @@ msgstr "Mailing Datum"
 
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "SMS Date"
-msgstr "SMS Datum"
+msgstr "SMS-datum"
 
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "SMS Status"
-msgstr "SMS Status"
+msgstr "SMS-status"
 
 #: templates/CRM/Mailing/Form/Settings.hlp
 msgid ""
@@ -2184,7 +2184,7 @@ msgstr "Het is een goed idee om uw mailing te testen door het aan uzelf te verze
 msgid ""
 "Enter a single email address or select an existing group and click \"Send a "
 "Test Mailing.\" Once you receive the test mailing:"
-msgstr "Voer één e-mailadres in of selecteer een bestaande groep en klik \"Verzend een test mailing.\" Wanneer u die mail ontvangt:"
+msgstr "Voer één e-mailadres in, of selecteer een bestaande groep, en klik op \"Testmailing verzenden\". Als u de mail hebt ontvangen:"
 
 #: templates/CRM/Mailing/Form/Test.hlp
 msgid "Verify the content and formatting."
