--- a/po/nl_NL/grant.po
+++ b/po/nl_NL/grant.po
@@ -6,13 +6,14 @@
 # HanV <han.velthuis@home.nl>, 2013-2015
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:03+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -315,8 +316,8 @@ msgstr "Er zijn geen toelagen vastgelegd voor dit contact."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Toelagen exporteren"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Toelagen bijwerken"
