--- a/po/ru_RU/common-components.po
+++ b/po/ru_RU/common-components.po
@@ -10,13 +10,14 @@
 # semden <mail@semden.info>, 2012
 # Val Ye <caesar.ye@gmail.com>, 2014
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Андрей Д <andrey_deev@bk.ru>, 2016
 # Фёдор Ходьков <fkhodkov@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 19:16+0000\n"
+"Last-Translator: Андрей Д <andrey_deev@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +33,7 @@ msgstr "OK"
 #: CRM/Admin/Form/ContactType.php templates/CRM/Admin/Form/Setting/Url.hlp
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image URL"
-msgstr "Ссылка (URL) для картинки"
+msgstr "URL картинки"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
