--- a/po/nl_NL/provinces.po
+++ b/po/nl_NL/provinces.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:35+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15554,188 +15554,188 @@ msgstr "Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Harjumaa"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Ida-Virumaa"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Jõgevamaa"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Järvamaa"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Läänemaa"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Lääne-Virumaa"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Põlvamaa"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Pärnumaa"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Raplamaa"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Tartumaa"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Viljandimaa"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Võrumaa"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Klaipėdos Apskritis"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Marijampolės Apskritis"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Panevėžio Apskritis"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Šiaulių Apskritis"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Tauragės Apskritis"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Telšių Apskritis"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataan"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al Bahah"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Al Hudud Ash Shamaliyah"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Blekinge län"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Dalarnas län"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Gotlands län"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Gävleborgs län"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Hallands län"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Jämtlands län"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Jönkopings län"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Kalmar län"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Kronobergs län"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Norrbottens län"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Skåne län"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Stockholms län"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Södermanlands län"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Uppsala län"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Värmlands län"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Västerbottens län"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Västernorrlands län"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Västmanlands län"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Västra Götalands län"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Örebro län"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Östergötlands län"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Noord Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
