po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:37+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -90,7 +90,7 @@ msgstr "Rapport Exemplaar kop"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr "Rapport Exemplaar voet"
+msgstr "Voettekst individueel rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
@@ -118,7 +118,7 @@ msgstr "Alleen voor huidige gebruiker"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Email"
-msgstr "E-mailadres bron"
+msgstr "E-mailadres broncontact"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Contact Email"
@@ -190,7 +190,7 @@ msgstr "Geïnterviewd"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Interviewer Name"
-msgstr "Naam Interviewer"
+msgstr "Naam interviewer"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "- any interviewer -"
@@ -202,7 +202,7 @@ msgstr "Naam respondent"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Odd / Even Street Number"
-msgstr "(on)even straatnummer"
+msgstr "Oneven / even huisnummer"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Respondent Status"
@@ -230,7 +230,7 @@ msgstr "Sluit \"niet-dossier\" uit"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Exclude cases"
-msgstr "Sluit dossiers uit"
+msgstr "Dossiers uitsluiten"
 
 #: CRM/Report/Form/Case/Demographics.php CRM/Report/Form/Case/TimeSpent.php
 msgid "Include Both"
@@ -405,7 +405,7 @@ msgstr "Contact subtype (contact A)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact B Full Name"
-msgstr ""
+msgstr "Volledige naam contact B"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Type (Contact B)"
@@ -437,7 +437,7 @@ msgstr "Telefoon (Contact B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Phone Ext (Contact B)"
-msgstr "Telefoon aanv. (Contact B)"
+msgstr "Telefoon-extensie (Contact B)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Relationship A-B "
@@ -651,7 +651,7 @@ msgstr "Contactnummer"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lybunt Report"
-msgstr "Vjmndj-rapport"
+msgstr "Lybunt-rapport"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Amount (%1)"
@@ -1122,7 +1122,7 @@ msgstr "Verstrekte Toelagen"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Number of Grants"
-msgstr "Aantal Toelagen"
+msgstr "Aantal toelagen"
 
 #: CRM/Report/Form/Instance.php
 msgid "You do not have permission to access this report."
@@ -1311,7 +1311,7 @@ msgstr "Aanmeldingsdatum"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Membership Source"
-msgstr "Lidmaatschap Bron"
+msgstr "Herkomst lidmaatschap"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 #: CRM/Report/Form/Member/Detail.php CRM/Report/Form/Member/Summary.php
@@ -1692,7 +1692,7 @@ msgstr "toegang tot criteria rapport"
 
 #: CRM/Report/Info.php
 msgid "Change report search criteria"
-msgstr "Wijzigen zoekcriteria rapport"
+msgstr "Zoekcriteria rapport wijzigen"
 
 #: CRM/Report/Info.php
 msgid "administer reserved reports"
@@ -1794,7 +1794,7 @@ msgstr "Titel en formaat"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Email Delivery"
-msgstr "E-mail verzending"
+msgstr "E-mailverzending"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Access"
@@ -1896,7 +1896,7 @@ msgstr "Sectie Kopregel / Groepeer Op"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Email Settings"
-msgstr "E-mail instellingen"
+msgstr "E-mailinstellingen"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -2114,7 +2114,7 @@ msgstr ""
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Duration (in Minutes)"
-msgstr ""
+msgstr "Totale duur (in minuten)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
@@ -2134,7 +2134,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
-msgstr ""
+msgstr "E-mailadres uitgeschakeld"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
@@ -2194,7 +2194,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
-msgstr ""
+msgstr "Uitgeschakeld"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Hold date"
@@ -2250,15 +2250,15 @@ msgstr ""
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Rapport afdrukken"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Exporteren als CSV"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Rapport verwijderen"
 
 #: CRM/Report/Page/InstanceList.php
 msgid ""
