--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:24+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -219,7 +219,7 @@ msgstr "Bewerk uw persoonlijke campagnepagina"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Welkom"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -235,7 +235,7 @@ msgstr "Doe mee"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Sign up Button"
-msgstr "Inschrijf knop"
+msgstr "Inschrijfknop"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Donate Now"
@@ -243,7 +243,7 @@ msgstr "Doneer nu"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Donation Button"
-msgstr "Donatie knop"
+msgstr "Donatieknop"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Progress Bar"
@@ -355,7 +355,7 @@ msgstr "De campagnepagina '%1' is niet meer actief."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Disabled"
-msgstr "Pagina Uitgeschakeld"
+msgstr "Pagina uitgeschakeld"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been enabled."
@@ -448,7 +448,7 @@ msgstr "Kopieer deze link om het direct op uw eigen website te delen!"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
-msgstr "Bewerk uw contact informatie"
+msgstr "Bewerk uw contactgegevens"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "De-activate the page (you can re-activate it later)"
@@ -737,7 +737,7 @@ msgstr "Toon pagina"
 #: xml/templates/message_templates/pcp_notify_html.tpl
 #: xml/templates/message_templates/pcp_notify_text.tpl
 msgid "Linked to Contribution Page"
-msgstr "Gelinkt aan donatie pagina"
+msgstr "Gelinkt aan donatiepagina"
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
@@ -951,7 +951,7 @@ msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Approval Required?"
-msgstr ""
+msgstr "Goedkeuring vereist?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
