--- a/po/ru_RU/financial.po
+++ b/po/ru_RU/financial.po
@@ -11,12 +11,13 @@
 # vrp <v.r.p.2010@yandex.kz>, 2015
 # vrp <v.r.p.2010@yandex.kz>, 2015
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Андрей Д <andrey_deev@bk.ru>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 19:12+0000\n"
+"Last-Translator: Андрей Д <andrey_deev@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +65,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "В приведенных ниже таблицах есть запись для этого финансового типа:% 1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -92,7 +93,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr ""
+msgstr "Нет информации об оплате"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
