--- a/po/ru_RU/member.po
+++ b/po/ru_RU/member.po
@@ -10,14 +10,15 @@
 # Victor Titarchuk, Ph.D. <v.titarchuk@servantek.org.ua>, 2012
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Андрей Д <andrey_deev@bk.ru>, 2016
 # Касум-заде Наргиз Касумовна <inactive+nargizkasumzade@transifex.com>, 2015
 # Касум-заде Наргиз Касумовна <inactive+nargizkasumzade@transifex.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 19:03+0000\n"
+"Last-Translator: Андрей Д <andrey_deev@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +33,7 @@ msgstr "Нет действительного статуса членства д
 #: CRM/Member/BAO/Membership.php
 msgid ""
 "The membership cannot be saved because the status cannot be calculated."
-msgstr ""
+msgstr "Подписка не может быть сохранена, т.к. статус не определен"
 
 #: CRM/Member/BAO/Membership.php CRM/Member/Form/MembershipView.php
 msgid "Membership Type:"
