--- a/po/ru_RU/mailing.po
+++ b/po/ru_RU/mailing.po
@@ -10,12 +10,13 @@
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Victor Ilyin <wictinfo@gmail.com>, 2012
 # Yuriy Shpak <y.shpak@servantek.net>, 2012
+# Андрей Д <andrey_deev@bk.ru>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-18 19:07+0000\n"
+"Last-Translator: Андрей Д <andrey_deev@bk.ru>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +34,7 @@ msgstr "CiviMail не отправит сообщения с пустым тел
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
-msgstr ""
+msgstr "Поле \"%1\" обязательно"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
@@ -57,7 +58,7 @@ msgstr "Выбранная рассылка была удалена."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
-msgstr ""
+msgstr "СМС сообщение"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Use Template"
