po: update po/en_GB/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/common-components.po
+++ b/po/en_GB/common-components.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 14:43+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -214,7 +214,7 @@ msgstr "Download"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Message Template"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -255,12 +255,12 @@ msgstr "Configure"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "About"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
 msgid "Advanced"
-msgstr ""
+msgstr "Advanced"
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 #: templates/CRM/Admin/Form/OptionGroup.tpl
@@ -319,7 +319,7 @@ msgstr "Is Active?"
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 #: ang/crmCaseType/activitySetDetails.html
 msgid "Workflow"
-msgstr ""
+msgstr "Workflow"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
@@ -328,7 +328,7 @@ msgstr "Cannot Delete"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Activity Types"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -392,7 +392,7 @@ msgstr "Batch Name"
 
 #: CRM/Batch/DAO/Batch.php CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Batch Title"
-msgstr ""
+msgstr "Batch Title"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -485,7 +485,7 @@ msgstr "Report Title"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Results"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -538,7 +538,7 @@ msgstr "if you are searching within a date or amount range, try a wider range of
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
@@ -793,7 +793,7 @@ msgstr "View Payment"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Credit Card Information"
-msgstr ""
+msgstr "Credit Card Information"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
@@ -1076,7 +1076,7 @@ msgstr "Balance Owed"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "loading"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1978,7 +1978,7 @@ msgstr "Select the appropriate financial type for this payment."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Template"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2119,12 +2119,12 @@ msgstr "Mailing Status"
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 #: ang/crmMailingAB/EditCtrl/report.html CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Opt-out"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Approval"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Clicks.php
 #: CRM/Report/Form/Mailing/Summary.php
@@ -2208,42 +2208,42 @@ msgstr "Balance Due"
 #: CRM/Contribute/Form/UpdateSubscription.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Number of Installments"
-msgstr ""
+msgstr "Number of Installments"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment Method is a required field."
-msgstr ""
+msgstr "Payment Method is a required field."
 
 #: CRM/Contribute/Form/Contribution.php CRM/Member/Form/Membership.php
 msgid "You do not have all the permissions needed for this page."
-msgstr ""
+msgstr "You do not have all the permissions needed for this page."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
 msgid "Update multiple records error"
-msgstr ""
+msgstr "Update multiple records error"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Installment Amount"
-msgstr ""
+msgstr "Installment Amount"
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Notification Email"
-msgstr ""
+msgstr "Notification Email"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Median"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Mode"
-msgstr ""
+msgstr "Mode"
 
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
@@ -2251,24 +2251,24 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "Fees"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-select-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "Mailing ID"
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Started"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
-msgstr ""
+msgstr "Unique Opens"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Total Opens"
-msgstr ""
+msgstr "Total Opens"
