po: update po/ja_JP/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/provinces.po
+++ b/po/ja_JP/provinces.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Satomi Sato <puritira2015@gmail.com>, 2015
+# Satomi Sato <puritira2015@gmail.com>, 2015-2016
 # YASUDA Yukihiro <yukihiro@labornetjp.org>, 2011
 # Yukihiro Yasuda <yasudayukihiro@gmail.com>, 2012
 # Yukihiro Yasuda <yukihiro@labornetjp.org>, 2011, 2012
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 06:55+0000\n"
+"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15551,35 +15551,35 @@ msgstr "シダ カルトリ州"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "ハリュ県"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "ヒーウマー"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "イダ ヴィル県"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "ヨゲヴァ県"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "イェルヴァ県"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "レーネ県"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "西ヴィル郡"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "ポルヴァ県"
 
 msgctxt "province"
 msgid "Pärnumaa"
